# Minute-of-meeting-Agentic-Ai-flow

./: .gitignore  README.md  requirements.txt
meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
minute_meeting/: pyproject.toml
minute_meeting/src/minute_meeting/: main.py
minute_meeting/src/minute_meeting/crews/gmailcrew/tools/: gmail_tool.py  gmail_utility.py
minute_meeting/src/minute_meeting/crews/meeting_minutes_crew/config/: tasks.yaml
