[project]
name = "minute_meeting"
version = "0.1.0"
description = "Minute_Meeting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
kickoff = "minute_meeting.main:kickoff"
run_crew = "minute_meeting.main:kickoff"
plot = "minute_meeting.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
